# CLIChess

./: CMakeLists.txt  README.md  TODO.md
resources/Data/Units/: Rook.json
resources/Scripts/: ChessHandler.lua  ChessMove.lua  Config.lua  Dirs.lua
resources/Scripts/Operation/: Castle.lua  ChessMove.lua
resources/Scripts/Units/: Bishop.lua  ChessHandler.lua  ChessTables.lua  King.lua  Knight.lua  Pawn.lua  Queen.lua  Rook.lua
src/: AWCMain.cpp  CMakeLists.txt  Console.cpp  ConsoleCommand.cpp
src/include/: Console.h  ConsoleCommand.h
